<resources>
    <string name="app_name">Dojo Sports Management</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="enter_user">Enter username…</string>
    <string name="enter_pass">Enter password…</string>
    <string name="manager">Manager</string>
    <string name="player">Player</string>
    <string name="cancel_reg">Return</string>
    <string name="drill_description">Drill description</string>
    <string name="drill_name">Drill name</string>
    <string name="drill_group_name">Drill Group Name</string>
    <string name="enter_group_name">Enter group name</string>
    <string name="welcome">Welcome User</string>
    <string name="view_groups">View your groups</string>
    <string name="create_a_group">Create a group</string>
    <string name="create_drill">Create drill</string>
    <string name="create_group">Create group</string>
    <string name="group_name">Group name</string>
    <string name="tvGroupManager">You are manager of this group</string>
    <string name="members_group">Members in this group</string>
    <string name="add_member">Add a player to the group</string>
    <string name="view_drill">View your drills</string>
    <string name="welcomeLoggedOut">Welcome, please log in or register</string>
</resources>