<?xml version="1.0" encoding="utf-8"?>

<androidx.appcompat.widget.LinearLayoutCompat
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:gravity="center"
>
    <TextView
            android:text="@string/welcomeLoggedOut"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
    />
    <Button
            android:text="@string/login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/login"
            android:onClick="toLogin"
    />
    <Button
            android:text="@string/register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/register"
            android:onClick="toRegister"
    />

</androidx.appcompat.widget.LinearLayoutCompat>