<?xml version="1.0" encoding="utf-8"?>

<androidx.appcompat.widget.LinearLayoutCompat
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity"
        android:orientation="vertical"
        android:gravity="center"
>


    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/newGroupName"
            android:hint="@string/enter_group_name"
            android:autofillHints=""/>

    <Button
            android:text="@string/create_group"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/createGroup"
            android:onClick="onCreateGroup"/>
    <Button
            android:text="@string/cancel_reg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/cancel"
            app:layout_constraintTop_toBottomOf="@+id/newRegister"
            app:layout_constraintStart_toStartOf="parent"
            android:onClick="close"/>
</androidx.appcompat.widget.LinearLayoutCompat>