<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center_horizontal"
>
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tvGroupDetailName"
            android:textStyle="bold"
            android:textSize="25sp"
            android:text="@string/app_name"
            android:paddingBottom="20dp"
    />
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tvGroupDetailMembers"
            android:text="@string/members_group"
            android:textSize="15sp"
            android:paddingBottom="10dp"
    />
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tvGroupDetailMemberList"
            android:paddingBottom="20dp"
    />
    <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_member"
            android:onClick="toNewMember"
    />

</androidx.appcompat.widget.LinearLayoutCompat>
