<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".RegisterActivity">

    <Button
            android:text="@string/cancel_reg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/cancel"
            android:layout_marginTop="140dp"
            app:layout_constraintTop_toBottomOf="@+id/radioGroup"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="158dp"
            android:layout_marginStart="158dp"
            android:layout_marginEnd="158dp"
            android:layout_marginRight="158dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.495"
            android:onClick="close"/>

    <Button
            android:text="@string/register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/newRegister"
            android:layout_marginTop="40dp"
            app:layout_constraintTop_toBottomOf="@+id/radioGroup"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="158dp"
            android:layout_marginStart="158dp"
            android:layout_marginEnd="158dp"
            android:layout_marginRight="158dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.285"
            android:onClick="onRegister"/>

    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/newUsername"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="96dp"
            android:layout_marginStart="96dp"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="136dp"
            android:hint="@string/enter_user"
            android:autofillHints=""/>

    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPersonName|textPassword"
            android:ems="10"
            android:id="@+id/newPassword"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="96dp"
            android:layout_marginStart="96dp"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="188dp"
            android:hint="@string/enter_pass"
            android:autofillHints=""/>

    <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginLeft="164dp"
            android:layout_marginStart="164dp"
            android:layout_marginTop="288dp"
            android:layout_marginEnd="164dp"
            android:layout_marginRight="164dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:id="@+id/radioGroup"
            app:layout_constraintHorizontal_bias="0.541"
            android:checkedButton="@id/radioPlayer">

        <RadioButton
                android:text="@string/player"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/radioPlayer"
                />

        <RadioButton
                android:text="@string/manager"
                android:layout_width="107dp"
                android:layout_height="wrap_content"
                android:id="@+id/radioManager"
                />

    </RadioGroup>

</androidx.constraintlayout.widget.ConstraintLayout>