<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout

        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">


    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/username"
            android:hint="@string/enter_user"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="98dp"
            android:layout_marginStart="98dp"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="250dp"
            android:autofillHints=""/>

    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:ems="10"
            android:id="@+id/password"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginLeft="98dp"
            android:layout_marginStart="98dp"
            android:layout_marginTop="300dp"
            android:hint="@string/enter_pass"
            android:autofillHints=""/>

    <Button
            android:text="@string/login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/login"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="106dp"
            android:layout_marginStart="106dp"
            android:layout_marginTop="14dp"
            app:layout_constraintTop_toBottomOf="@+id/password"
            android:onClick="onLogin"/>

    <Button
            android:text="@string/register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/register"
            android:layout_marginEnd="106dp"
            android:layout_marginRight="106dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="14dp"
            app:layout_constraintTop_toBottomOf="@+id/password"
            android:onClick="onRegister"/>
</androidx.constraintlayout.widget.ConstraintLayout>